# Sonic

./: COMMANDS.md  Cargo.toml  PROTOCOL.md  README.md  index.html  package-lock.json  package.json  plan.md  task.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/sonic-audio/: Cargo.toml
crates/sonic-audio/examples/: audio_devices.rs
crates/sonic-audio/src/: device.rs  duplex.rs  lib.rs  pipeline.rs  resample.rs  streams.rs
crates/sonic-audio/tests/: over_the_air_link.rs
crates/sonic-protocol/: Cargo.toml
crates/sonic-protocol/examples/: ber_sweep.rs
crates/sonic-protocol/src/: arq.rs  bandplan.rs  fft.rs  framing.rs  iq.rs  lib.rs  telemetry.rs
crates/sonic-protocol/src/fec/: galois.rs  interleave.rs  mod.rs  reed_solomon.rs
crates/sonic-protocol/src/modem/: css.rs  mfsk.rs  mod.rs  ofdm.rs  qam.rs
crates/sonic-protocol/src/sim/: awgn.rs  clock_drift.rs  hardware.rs  mod.rs  multipath.rs
crates/sonic-protocol/tests/: end_to_end.rs  hardware_link.rs  modes_matrix.rs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: acoustic_beacon.rs  android_ctx.rs  android_permissions.rs  audio_watch.rs  channel_check.rs  commands.rs  discovery.rs  events.rs  lib.rs  self_test.rs  session.rs  state.rs
