# Идентичность пакета — литеральная (не через workspace): release.yml авто-бампит
# версию через `sed s/^version = "..."/.../` именно по этому файлу, поэтому строка
# `version = "..."` должна оставаться литеральной. Общие поля для крейтов-библиотек
# живут в корневом [workspace.package].
[package]
name = "tauri-app"
version = "0.2.3"
description = "Sonic — full-duplex акустический мессенджер"
authors = ["tuhlopuz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
cpal = { workspace = true }
crossbeam-channel = { workspace = true }
sonic-protocol = { workspace = true }
sonic-audio = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
